--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,10 @@ requirements:
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
-    - {{ cdt('libx11-devel') }}  # [linux]
+    - {{ cdt('libx11-devel') }}          # [linux]
     - {{ cdt('xorg-x11-proto-devel') }}  # [linux]
+    - {{ cdt('mesa-libegl-devel') }}     # [linux]
+    - {{ cdt('mesa-libgl-devel')}}       # [linux]
 
   host:
     - python
